# plume-sph

./: .gitignore  Makefile.am  Makefile.am~  README  TODO  atmosphere.m  atmosphere.m~  ccr_submit.slurm  config.h  config.h.in  configure.ac  configure.ac.back  configure.ac_back  configure.ac~  configure.scan  myfunction1.m  myfunction2.m  myfunction3.m
Meteo_data/: SondeKEF_2010_04_14_00Z.txt  SondeKEF_2010_04_14_00Z_converted.txt  data_convert.m  data_convert_new.m  parameters_BM.txt  simulation_Eyjafjallajokull_back.data
datstr/: Involved_header.h~  Makefile.am  bgmesh.h  bnd_image.cc  bnd_image.h  bucket.cc  bucket.h  hashtab.cc  hilbert.c  hilbert.h  mesh_update.cc  particle.cc  particle.h  properties.h  thashtab.cc  thashtab.h
datstr/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
datstr/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
datstr/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
debug/: Makefile.am  debug_bucket_lib.cc  debug_header.h  debug_lib.cc  particle_deb.cc
doc/: Plume-SPH_1.0.0_User_Guide.docx
gisapi/: GisApi.cc  GisCats.cc  GisTriFile.h
multiproc/: BSFC_refine_partition.cc  BSFC_update_and_send_elements.cc  buckhead.h  exvar.h  move_bnd_img.cc  move_data.cc  mpi_ind_struct.cc  mpi_struct.cc  multiproc.h  pack_data.cc  pack_data.h  repartition_BSFC.cc  repartition_BSFC.h  send_reflections.cc
preproc/: buckstr.h  createfunky.cc  gisapi.h  inc_plane.cc  preprocess  preprocess.cc  preprocess.h
sh/: .install.sh.swp  ash_install.sh  ash_install_keith.sh  install  install.sh  install_ccr.sh  install_ccr_gprof.sh  install_ccr_mpip.sh  install_gprof.sh  install_keith.sh  install_keith_gprof.sh
src/: Makefile.am  Makefile.am~  adapt_domain.cc  add_air.cc  add_pressure_ghost.cc  add_wall_ghost.cc  bcond.cc  config.h.in  configure  constant.h  dataread.cc  density_massfrac.cc  h5part_writer.cc  hdf5calls.cc  main.cc  matlab_writer.cc  mom_engr_update.cc  neighs.cc  options.h  parameters.h  particler  particler.h  scan_outside_layer.cc  setup_erupt.cc  setup_ini.cc  smooth_velocity.cc  sph_header.h  sph_lib.cc  timestep.cc  update_out_layer.cc  update_pos.cc  write_output.cc
src/datstr/: Involved_header.h  Makefile.am  Modification_record  bgmesh.h  bnd_image.cc  bnd_image.h  bucket.cc  bucket.h  hashtab.h  hilbert.c  mesh_update.cc  meteo.cc  meteo.h  particle.cc  particle.h  properties.h  thashtab.cc  thashtab.h
src/datstr/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/datstr/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml
src/debug/: Makefile.am  Makefile.am~  debug_bucket_lib.cc  debug_header.h  debug_lib.cc  particle_deb.cc
src/gisapi/: GdalApi.cc  GisAscFile.cc  GisBinFile.cc  GisCats.h  GisTriFile.cc  Makefile.am
src/multiproc/: BSFC_create_bins.cc  BSFC_update_and_send_elements.cc  Makefile.am  Makefile.am~  exvar.h  move_bnd_img.cc  mpi_ind_struct.cc  mpi_struct.cc  multiproc.h  pack_data.cc  pack_data.h  repartition_BSFC.cc  repartition_BSFC.h  send_reflections.cc
src/plume/: IndMap.h  Makefile.am  TODO  adapt_domain.cc  add_air.cc  add_pressure_ghost.cc  add_wall_ghost.cc  bcond.cc  calculate_gradient.cc  constant.h  dataread.cc  density_massfrac.cc  h5part_writer.cc  hdf5calls.h  main.cc  matlab_writer.cc  mom_engr_update.cc  neighs.cc  options.h  outforms.h  parameters.h  particler.h  setup_erupt.cc  setup_influx.cc  setup_ini.cc  shift_brief_buck.cc  simulation.data  smooth_velocity.cc  sph_header.h  sph_lib.cc  timestep.cc  update_pos.cc  write_output.cc
src/preproc/: Makefile.am  Makefile.am~  buckstr.h  preprocess  preprocess.cc  preprocess.h  simulation.data
